--- a/views/layouts/quickView.ejs
+++ b/views/layouts/quickView.ejs
@@ -33,16 +33,12 @@
                         <div class="product-detail-rating">
                             <div class="pro-details-brand">
                                 <span>
-                                    <strong><i class="fa-solid fa-list"
-                                            style="margin-right: 5px;"></i></strong>
+                                    <strong><i class="fa-solid fa-list" style="margin-right: 5px;"></i></strong>
                                     <span id="quickViewCategory"></span>
                                 </span>
                             </div>
                             <div class="product-rate-cover text-end">
-                                <div class="product-rate d-inline-block">
-                                    <div class="product-rating" style="width:90%"></div>
-                                </div>
-                                <span class="font-small ml-5 text-muted">(25 reviews)</span>
+                                <div id="quickViewRating"></div>
                             </div>
                         </div>
                         <div class="product-detail-rating">
@@ -51,8 +47,7 @@
                                 <span id="quickViewBrand"></span>
                             </div>
                             <div class="pro-details-brand">
-                                <strong><i class="fa-solid fa-venus-mars"
-                                        style="margin-right: 5px;"></i></strong>
+                                <strong><i class="fa-solid fa-venus-mars" style="margin-right: 5px;"></i></strong>
                                 <span id="quickViewGender"></span>
                             </div>
                         </div>
@@ -62,12 +57,12 @@
                             </div>
                             <div class="attr-detail attr-size">
                                 <strong class="mr-10">
-                                    <i class="fa fa-tshirt" aria-hidden="true"></i> 
-                                  </strong>
-                                  
+                                    <i class="fa fa-tshirt" aria-hidden="true"></i>
+                                </strong>
+
                                 <ul class="list-filter size-filter font-small">
                                     <li class="active">
-                                        <a href="#" >
+                                        <a href="#">
                                             <span id="quickViewSize"></span>
                                         </a>
                                     </li>
